src/objects/inscor__Inspection_Item__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Action_Code__c</fullName>
        <label>Action Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visual Check</fullName>
                </value>
                <value>
                    <fullName>Functional Test</fullName>
                </value>
                <value>
                    <fullName>Bench Test</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Overhaul</fullName>
                </value>
                <value>
                    <fullName>New Part</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>servicable</fullName>
                    <label>Servicable</label>
                </value>
                <value>
                    <fullName>unservicable</fullName>
                    <label>Unservicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__External_Comments__c</fullName>
        <label>External Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Finding_Details__c</fullName>
        <label>Finding Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Inspection_Details__c</fullName>
        <label>Inspection Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inspection Items</relationshipLabel>
        <relationshipName>Inspection_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Inspection Items</relationshipLabel>
        <relationshipName>Inspection_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inspection Item</label>
    <nameField>
        <displayFormat>WOTII-{0}</displayFormat>
        <label>Inspection Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>